# csaps

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.txt  MANIFEST.in  README.md  csaps.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  pypi.yaml  release.yaml  tests.yaml
csaps/: __init__.py  _base.py  _csaps.py  _reshape.py  _shortcut.py  _sspndg.py  _sspumv.py  _types.py  _utils.py  _version.py
docs/: api.rst  benchmark.rst  benchmarks.rst  conf.py  csaps.mplstyle  formulation.rst  index.rst  internals.rst  manual.rst  quickstart.rst  tutorial.rst
docs/benchmarks/: windows-cpython-3.7-amd64.rst
examples/: csaps.ipynb
tests/: conftest.py  test_analysis.py  test_csaps.py  test_gridded.py  test_multivariate.py  test_ndg.py  test_ndgrid.py  test_reshape.py  test_shortcut.py  test_umv.py  test_univariate.py
