[tool.poetry]
name = "csaps"
version = "1.3.3"
description = "Cubic spline approximation (smoothing)"
authors = ["Evgeny Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/espdev/csaps"
repository = "https://github.com/espdev/csaps"
documentation = "https://csaps.readthedocs.io"

keywords = ["cubic", "spline", "approximation", "smoothing", "interpolation", "csaps"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

include = [
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTORS.txt",
]

packages = [
    {include = "csaps"}
]


[tool.poetry.dependencies]
python = ">=3.10"
typing-extensions = "*"
numpy = [
    {version = "*", python = "<3.12"},
    {version = ">=1.26.2", python = ">=3.12"},
]
scipy = [
    {version = "*", python = "<3.12"},
    {version = ">=1.11.4", python = ">=3.12"},
]


[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.5"
mypy = "^1.15.0"
scipy-stubs = "*"
pre-commit = "^4.2.0"
poethepoet = "^0.33.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
docutils = "^0.20.0"
furo = "^2024.8.6"
numpydoc = "^1.6.0"
m2r2 = "^0.3.2"
matplotlib = "^3.7.4"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".ruff_cache",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",       # All pycodestyle errors
    "W",       # All pycodestyle warnings
    "F",       # All Pyflakes errors
    "A",       # All flake8-builtins
    "Q",       # Quotes
    "I",       # Sort imports
    "T201",    # print found
    "T203",    # pprint found
]
ignore = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
force-to-top = ["typing", "typing_extensions", "pytest"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"


[tool.mypy]
python_version = "3.10"


[tool.poe.tasks]
test = "pytest -v "
test-cov = "pytest --cov=csaps"
test-ci = "pytest -v --color=yes --cov=csaps --cov-report=term --cov-report=lcov:coverage.info"

check-format-pre-commit = "ruff format --check"
check-lint-pre-commit = "ruff check"
check-types-pre-commit = "mypy"

check-format = "ruff format . --check"
check-lint = "ruff check ."
check-types = "mypy -p csaps"
check = ["check-format", "check-lint", "check-types"]

fix-format = "ruff format ."
fix-lint = "ruff check --fix ."
fix = ["fix-format", "fix-lint"]

docs = "sphinx-build docs/ docs/_build/ --builder html"
